--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -137,12 +137,12 @@
         </div>
 
         <div id="repairsArea" class="mb-6 min-h-[200px] max-h-[50vh] overflow-y-auto p-1">
-            <p id="repairsPlaceholder" class="text-gray-500 text-center py-4">Please complete selections to quote. You may choose multiple repairs of the same service category.</p>
+            <p id="repairsPlaceholder" class="text-gray-500 text-center py-4">Please complete selections to see repair options. You may choose multiple repairs of the same service category.</p>
             </div>
 
         <div class="mt-8 text-center">
             <button id="contactButton" class="bg-orange-600 hover:bg-orange-700 text-white font-bold py-3 px-8 rounded-lg shadow-md transition duration-150 ease-in-out text-lg">
-                Click for Quote and Contact Info
+                Click for Quote and Contact Info to Proceed with Repair
             </button>
             <p id="mainSubmissionMessage" class="mt-4 text-red-600 font-medium"></p>
         </div>
@@ -157,7 +157,6 @@
                     <h3 class="text-xl font-semibold text-gray-700 mb-3">Our Information</h3>
                     <ul class="space-y-2 text-gray-600">
                         <li><strong>Phone:</strong> <a href="tel:+16316062349" class="text-orange-600 hover:text-orange-700">(631) 606-2FIX (2349)</a></li>
-			<li><strong>Phone:</strong> <a href="tel:+16318555555" class="text-orange-600 hover:text-orange-700">(631) 855-5555</a></li>    
                         <li><strong>Email:</strong> <a href="mailto:jwselectronicsrepair@gmail.com" class="text-orange-600 hover:text-orange-700">jwselectronicsrepair@gmail.com</a></li>
                         <li><strong>Address:</strong> 1167 Deer Park Ave, North Babylon, NY 11703</li>
                         <li><strong>Exact Location:</strong> Inside the Wireless Shack, Next to Sushi Express, on the North end of the Stables Gardens Strip, closer to Naz's Halal</li>
@@ -172,14 +171,14 @@
                     <hr id="contactFormQuoteSeparator" class="my-2 border-gray-300" style="display: none;">
                     <p class="text-right font-bold mt-2 text-orange-600 text-2xl">Estimated Total: <span id="contactFormQuoteTotal"></span></p>
                     <div class="mt-4 text-center">
-                        <a id="mailInFormButton" href="https://www.jwselectronicsrepair.com/mail-in-form" target="_blank" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2 px-6 rounded-lg shadow-sm transition duration-150 ease-in-out text-base">
+                        <a id="mailInFormButton" href="https://www.jwselectronicsrepair.com/mail-in-form" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-semibold py-2 px-6 rounded-lg shadow-sm transition duration-150 ease-in-out text-base"> {/* Removed target="_blank" */}
                             Mail-In Repair Form
                         </a>
                     </div>
-                    <p class="text-xs text-center mt-4 text-gray-500">Please mention this quote when contacting us. Prices may change at any time and all repairs are subject to NY state sales tax.</p>
+                    <p class="text-xs text-center mt-4 text-gray-500">Please mention this quote when contacting us. Prices are subject to change at any time and are not always 100% accurate.</p>
                 </div>
             </div>
-            <p class="text-center text-gray-700 mt-6">Please Call, Text, E-Mail, Visit us or Mail in device to proceed with your repair.</p>
+            <p class="text-center text-gray-700 mt-6">Please call, text, email, or visit us with your quote details to proceed with your repair.</p>
         </div>
     </div>
 
@@ -2900,7 +2899,7 @@
         ];
            // --- END OF SERVICE DATA ---
 
-       // DOM Element References
+      // DOM Element References
         const categoryIconContainer = document.getElementById('categoryIconContainer');
         const brandSelect = document.getElementById('brandSelect');
         const modelSelect = document.getElementById('modelSelect');
